Add comments + done logic for generation players.

--- a/MafiaTool/MainWindow.xaml
+++ b/MafiaTool/MainWindow.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:MafiaTool.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="600"
+        Title="Mafia Tool" 
+        Height="700" 
+        Width="600"
         MinHeight="600"
         MinWidth="500"
-        MaxHeight="800"
-        MaxWidth="800">
+        Icon="/Assets/Images/mafia_icon.ico">
     
     <Window.DataContext>
         <viewModels:MainWindowViewModel/>
