--- a/MafiaTool/Assets/BaseStyle.xaml
+++ b/MafiaTool/Assets/BaseStyle.xaml
@@ -1,10 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="RoleTextBlock" TargetType="{x:Type TextBlock}">
+    <Style x:Key="DefaultTextBlock" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="15"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+    </Style>
+    
+    <Style x:Key="NonListBoxTextBlock" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource DefaultTextBlock}">
+        <Setter Property="Padding" Value="5 0"/>
     </Style>
     
     <Style x:Key="PlayerNameTextBox" TargetType="{x:Type TextBox}">
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="MinWidth" Value="50"/>
+        <Setter Property="TextAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="0 -1 0 1"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
@@ -16,29 +25,21 @@
                             <Setter Property="Opacity" TargetName="border" Value="0.56"/>
                         </Trigger>
                         <Trigger Property="IsKeyboardFocused" Value="True">
-                            <Setter Property="Padding" Value="0 -1 0 1"/>
                             <Setter Property="BorderThickness" Value="1"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="False">
                             <Setter Property="BorderThickness" Value="1"/>
                             <Setter Property="BorderBrush" Value="Transparent"/>
-                            <Setter Property="Padding" Value="0 -1 0 1"/>
                         </Trigger>
                         <Trigger Property="IsFocused" Value="True">
-                            <Setter Property="Padding" Value="0 -1 0 1"/>
                             <Setter Property="BorderBrush" Value="DarkGray"/>
                             <Setter Property="BorderThickness" Value="1"/>
                         </Trigger>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Padding" Value="0 -1 0 1"/>
-                        </Trigger>
                         <Trigger Property="Text" Value="">
-                            <Setter Property="Padding" Value="0 -1 0 1"/>
                             <Setter Property="BorderThickness" Value="1"/>
                             <Setter Property="BorderBrush" Value="DarkGray"/>
                         </Trigger>
                         <Trigger Property="Text" Value="{x:Null}">
-                            <Setter Property="Padding" Value="0 -1 0 1"/>
                             <Setter Property="BorderThickness" Value="1"/>
                             <Setter Property="BorderBrush" Value="DarkGray"/>
                         </Trigger>
