--- a/MafiaTool/Views/MainMenu.xaml
+++ b/MafiaTool/Views/MainMenu.xaml
@@ -41,117 +41,125 @@
 
         <TextBlock Grid.Row="0" Grid.Column="0"
                    Grid.RowSpan="3" Grid.ColumnSpan="2"
+                   Style="{StaticResource DefaultTextBlock}"
                    VerticalAlignment="Top"
                    Text="Роли:"
-                   FontSize="15"
                    Margin="10 0 0 0"/>
 
-        <ScrollViewer Grid.Row="0" Grid.Column="0"
-                      Grid.RowSpan="2" Grid.ColumnSpan="2"
-                      VerticalScrollBarVisibility="Auto"
-                      HorizontalScrollBarVisibility="Auto"
-                      Margin="10 20 10 0">
-            <ListBox Background="Azure"
-                     ItemsSource="{Binding RoleVariations}"
-                     SelectionMode="Single"
-                     SelectedItem="{Binding SelectedRole}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource RoleTextBlock}"
-                                       Text="{Binding}"/>
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </ScrollViewer>
-        
+        <ListBox Grid.Row="0" Grid.Column="0"
+                 Grid.RowSpan="2" Grid.ColumnSpan="2"
+                 Background="Azure"
+                 ScrollViewer.VerticalScrollBarVisibility="Auto"
+                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                 ScrollViewer.CanContentScroll="True"
+                 Margin="10 20 10 0"
+                 ItemsSource="{Binding RoleVariations}"
+                 SelectionMode="Single"
+                 SelectedItem="{Binding SelectedRole}"
+                 MouseDoubleClick="AddRoleCount_OnMouseDoubleClick">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Style="{StaticResource DefaultTextBlock}"
+                               Text="{Binding}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
         <Button Grid.Row="2" Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10 0"
-                FontSize="15">
-            <TextBlock FontSize="15"
+                FontSize="15"
+                Command="{Binding AddRoleToGenerationListCommand}"
+                IsEnabled="{Binding AddingRoleAvailable}">
+            <TextBlock Style="{StaticResource DefaultTextBlock}"
                        Text="Добавить"
-                       TextAlignment="Center"
-                       TextWrapping="Wrap"/>
+                       TextAlignment="Center"/>
         </Button>
 
         <TextBlock Grid.Row="3" Grid.Column="0"
                    Grid.RowSpan="3" Grid.ColumnSpan="2"
+                   Style="{StaticResource DefaultTextBlock}"
                    VerticalAlignment="Top"
                    Text="Выбранные роли:"
-                   FontSize="15"
                    Margin="10 0 0 0"/>
 
-        <ScrollViewer Grid.Row="3" Grid.Column="0"
-                      Grid.RowSpan="2" Grid.ColumnSpan="2"
-                      VerticalScrollBarVisibility="Auto"
-                      HorizontalScrollBarVisibility="Auto"
-                      Margin="10 20 10 0">
-            <ListBox Background="Azure"
-                     ItemsSource="{Binding PlayersRoleCounts}"
-                     SelectionMode="Single"
-                     SelectedItem="{Binding SelectedRole}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource RoleTextBlock}"
-                                       Text="{Binding Key.Name}"/>
-                            <Separator Width="5" Visibility="Hidden"/>
-                            <Separator Width="5" FontSize="15"
-                                       Background="Black"
-                                       Margin="0 1 0 -1"/>
-                            <Separator Width="5" Visibility="Hidden"/>
-                            <TextBlock Style="{StaticResource RoleTextBlock}"
-                                       Text="{Binding Value}"/>
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </ScrollViewer>
-        
+        <ListBox Grid.Row="3" Grid.Column="0"
+                 Grid.RowSpan="2" Grid.ColumnSpan="2"
+                 Margin="10 20 10 0"
+                 Background="Azure"
+                 ItemsSource="{Binding PlayersRoleCounts}"
+                 SelectionMode="Single"
+                 SelectedItem="{Binding SelectedRoleCount}"
+                 MouseDoubleClick="RemoveRoleCount_OnMouseDoubleClick">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Style="{StaticResource DefaultTextBlock}"
+                                   Text="{Binding Key.Name}"/>
+                        <Separator Width="5" Visibility="Hidden"/>
+                        <Separator Width="5" FontSize="15"
+                                   Background="Black"
+                                   Margin="0 1 0 -1"/>
+                        <Separator Width="5" Visibility="Hidden"/>
+                        <TextBlock Style="{StaticResource DefaultTextBlock}"
+                                   Text="{Binding Value}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
         <Button Grid.Row="5" Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10 0"
-                FontSize="15">
-            <TextBlock FontSize="15"
+                Command="{Binding RemoveRoleFromGenerationCommand}">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SelectedRoleCount}" Value="{x:Null}">
+                            <Setter Property="IsEnabled" Value="False"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+            <TextBlock Style="{StaticResource DefaultTextBlock}"
                        Text="Удалить"
-                       TextAlignment="Center"
-                       TextWrapping="Wrap"/>
+                       TextAlignment="Center"/>
         </Button>
 
         <Button Grid.Row="6" Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10 0"
-                FontSize="15">
-            <TextBlock FontSize="15"
+                Command="{Binding GeneratePlayersCommand}">
+            <TextBlock Style="{StaticResource DefaultTextBlock}"
                        Text="Сгенерировать роли"
-                       TextAlignment="Center"
-                       TextWrapping="Wrap"/>
+                       TextAlignment="Center"/>
         </Button>
 
         <TextBlock Grid.Row="0"
                    Grid.Column="2"
                    Grid.RowSpan="2"
                    Grid.ColumnSpan="2"
+                   Style="{StaticResource DefaultTextBlock}"
                    VerticalAlignment="Top"
                    Text="Описание роли:"
-                   FontSize="15"
                    Margin="10 0 0 0"/>
 
-        <TextBox Grid.Row="0"
-                 Grid.Column="2"
-                 Grid.RowSpan="3"
-                 Grid.ColumnSpan="2"
-                 Margin="10 20 10 0"
-                 IsEnabled="False"
-                 Text="{Binding SelectedRole.Description}"/>
+        <Border Grid.Row="0"
+                Grid.Column="2"
+                Grid.RowSpan="3"
+                Grid.ColumnSpan="2"
+                Margin="10 20 10 0"
+                BorderBrush="LightGray"
+                BorderThickness="1">
+            <TextBlock Text="{Binding SelectedRole.Description}"
+                       Style="{StaticResource NonListBoxTextBlock}"/>
+        </Border>
 
         <TextBlock Grid.Row="3"
                    Grid.Column="2" Grid.ColumnSpan="2"
+                   Style="{StaticResource DefaultTextBlock}"
                    VerticalAlignment="Top"
                    Text="Способности:"
-                   FontSize="15"
                    Margin="10 0 0 0"/>
 
         <Border Grid.Row="3" Grid.RowSpan="3"
@@ -168,10 +176,14 @@
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Style="{StaticResource RoleTextBlock}"
+                                <TextBlock Style="{StaticResource DefaultTextBlock}"
                                            Text="{Binding}">
                                     <TextBlock.ToolTip>
-                                        <ToolTip Content="{Binding Description}"/>
+                                        <ToolTip>
+                                            <TextBlock Text="{Binding Description}"
+                                                       Style="{StaticResource DefaultTextBlock}"
+                                                       MaxWidth="300"/>
+                                        </ToolTip>
                                     </TextBlock.ToolTip>
                                 </TextBlock>
                             </StackPanel>
@@ -194,16 +206,13 @@
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" Margin="5">
-                                <TextBlock Style="{StaticResource RoleTextBlock}"
+                                <TextBlock Style="{StaticResource DefaultTextBlock}"
                                            Text="{Binding StringFormat={}{0}., Path=Number}"/>
                                 <Separator Width="5" Visibility="Hidden"/>
                                 <TextBox Style="{StaticResource PlayerNameTextBox}"
-                                         MinWidth="50"
-                                         TextAlignment="Left"
-                                         FontSize="15"
                                          Text="{Binding Name, Mode=TwoWay}"/>
                                 <Separator Width="5" Visibility="Hidden"/>
-                                <TextBlock Style="{StaticResource RoleTextBlock}"
+                                <TextBlock Style="{StaticResource DefaultTextBlock}"
                                            Text="{Binding StringFormat={}({0}), Path=Role.Name}"/>
                             </StackPanel>
                         </DataTemplate>
@@ -211,12 +220,11 @@
                 </ItemsControl>
             </ScrollViewer>
         </Border>
-        
+
         <Button Grid.Row="8" Grid.Column="2"
                 Grid.ColumnSpan="2"
-                Margin="10"
-                FontSize="15">
-            <TextBlock FontSize="40"
+                Margin="10">
+            <TextBlock FontSize="35"
                        Text="Начать игру!"
                        TextAlignment="Center"
                        TextWrapping="Wrap"/>
