--- a/MafiaTool/Views/MainMenu.xaml
+++ b/MafiaTool/Views/MainMenu.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:MafiaTool.ViewModels"
              mc:Ignorable="d"
-             d:DesignHeight="700" d:DesignWidth="600">
+             d:DesignHeight="800" d:DesignWidth="600">
 
     <UserControl.DataContext>
         <viewModels:MainMenuVM/>
@@ -22,11 +22,14 @@
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
           ShowGridLines="False">
         <Grid.RowDefinitions>
+            <RowDefinition Height="0.35*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.25*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="0.5*"/>
             <RowDefinition Height="0.5*"/>
             <RowDefinition Height="0.5*"/>
             <RowDefinition Height="2*"/>
@@ -38,15 +41,23 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
+        
+        <Menu Grid.Row="0" Grid.Column="0"
+              Grid.ColumnSpan="4"
+              VerticalAlignment="Top"
+              FontSize="15"
+              Background="White">
+            <MenuItem Header="Вид"></MenuItem>
+        </Menu>
 
-        <TextBlock Grid.Row="0" Grid.Column="0"
+        <TextBlock Grid.Row="1" Grid.Column="0"
                    Grid.RowSpan="3" Grid.ColumnSpan="2"
                    Style="{StaticResource DefaultTextBlock}"
                    VerticalAlignment="Top"
                    Text="Роли:"
                    Margin="10 0 0 0"/>
 
-        <ListBox Grid.Row="0" Grid.Column="0"
+        <ListBox Grid.Row="1" Grid.Column="0"
                  Grid.RowSpan="2" Grid.ColumnSpan="2"
                  Background="Azure"
                  ScrollViewer.VerticalScrollBarVisibility="Auto"
@@ -65,7 +76,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button Grid.Row="2" Grid.Column="0"
+        <Button Grid.Row="3" Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10 0"
                 FontSize="15"
@@ -76,14 +87,21 @@
                        TextAlignment="Center"/>
         </Button>
 
-        <TextBlock Grid.Row="3" Grid.Column="0"
+        <TextBlock Grid.Row="4" Grid.Column="0"
+                   Grid.RowSpan="3" Grid.ColumnSpan="2"
+                   Style="{StaticResource DefaultTextBlock}"
+                   VerticalAlignment="Top"
+                   Text="{Binding StringFormat={}Количество игроков: {0}, Path=PlayersCount}"
+                   Margin="10 0 0 0"/>
+
+        <TextBlock Grid.Row="5" Grid.Column="0"
                    Grid.RowSpan="3" Grid.ColumnSpan="2"
                    Style="{StaticResource DefaultTextBlock}"
                    VerticalAlignment="Top"
                    Text="Выбранные роли:"
                    Margin="10 0 0 0"/>
 
-        <ListBox Grid.Row="3" Grid.Column="0"
+        <ListBox Grid.Row="5" Grid.Column="0"
                  Grid.RowSpan="2" Grid.ColumnSpan="2"
                  Margin="10 20 10 0"
                  Background="Azure"
@@ -108,7 +126,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button Grid.Row="5" Grid.Column="0"
+        <Button Grid.Row="7" Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10 0"
                 Command="{Binding RemoveRoleFromGenerationCommand}">
@@ -126,16 +144,27 @@
                        TextAlignment="Center"/>
         </Button>
 
-        <Button Grid.Row="6" Grid.Column="0"
+        <Button Grid.Row="8" Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="10 0"
+                Command="{Binding ClearPlayersListCommand}"
+                IsEnabled="{Binding HasPlayers}">
+            <TextBlock Style="{StaticResource DefaultTextBlock}"
+                       Text="Очистить"
+                       TextAlignment="Center"/>
+        </Button>
+
+        <Button Grid.Row="9" Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Margin="10 0"
+                IsEnabled="{Binding HasPlayers}"
                 Command="{Binding GeneratePlayersCommand}">
             <TextBlock Style="{StaticResource DefaultTextBlock}"
                        Text="Сгенерировать роли"
                        TextAlignment="Center"/>
         </Button>
 
-        <TextBlock Grid.Row="0"
+        <TextBlock Grid.Row="1"
                    Grid.Column="2"
                    Grid.RowSpan="2"
                    Grid.ColumnSpan="2"
@@ -144,7 +173,7 @@
                    Text="Описание роли:"
                    Margin="10 0 0 0"/>
 
-        <Border Grid.Row="0"
+        <Border Grid.Row="1"
                 Grid.Column="2"
                 Grid.RowSpan="3"
                 Grid.ColumnSpan="2"
@@ -155,14 +184,14 @@
                        Style="{StaticResource NonListBoxTextBlock}"/>
         </Border>
 
-        <TextBlock Grid.Row="3"
+        <TextBlock Grid.Row="4"
                    Grid.Column="2" Grid.ColumnSpan="2"
                    Style="{StaticResource DefaultTextBlock}"
                    VerticalAlignment="Top"
                    Text="Способности:"
                    Margin="10 0 0 0"/>
 
-        <Border Grid.Row="3" Grid.RowSpan="4"
+        <Border Grid.Row="4" Grid.RowSpan="6"
                 Grid.Column="2" Grid.ColumnSpan="2"
                 BorderBrush="LightGray"
                 BorderThickness="1"
@@ -194,7 +223,7 @@
         </Border>
 
         <Border Grid.Column="0" Grid.ColumnSpan="2"
-                Grid.Row="7" Grid.RowSpan="2"
+                Grid.Row="10" Grid.RowSpan="2"
                 BorderBrush="LightGray"
                 BorderThickness="1"
                 Margin="10">
@@ -212,16 +241,18 @@
                                 <TextBox Style="{StaticResource PlayerNameTextBox}"
                                          Text="{Binding Name, Mode=TwoWay}"/>
                                 <Separator Width="5" Visibility="Hidden"/>
-                                <TextBlock Style="{StaticResource DefaultTextBlock}"
-                                           Text="{Binding StringFormat={}({0}), Path=Role.Name}"/>
+                                <TextBox Style="{StaticResource DefaultTextBox}"
+                                         IsReadOnly="True"
+                                         BorderThickness="0"
+                                         Text="{Binding StringFormat={}({0}), Path=Role.Name}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </ScrollViewer>
         </Border>
-        
-        <CheckBox Grid.Row="7" Grid.Column="2"
+
+        <CheckBox Grid.Row="10" Grid.Column="2"
                   Grid.ColumnSpan="2"
                   Margin="10 10 0 0"
                   VerticalContentAlignment="Center"
@@ -236,7 +267,7 @@
                        VerticalAlignment="Center"/>
         </CheckBox>
 
-        <Button Grid.Row="7" Grid.Column="2"
+        <Button Grid.Row="10" Grid.Column="2"
                 Grid.ColumnSpan="2"
                 Margin="10 50 10 10"
                 IsEnabled="{Binding HasLastGame}"
@@ -247,7 +278,7 @@
                        TextWrapping="Wrap"/>
         </Button>
 
-        <Button Grid.Row="8" Grid.Column="2"
+        <Button Grid.Row="11" Grid.Column="2"
                 Grid.ColumnSpan="2"
                 Margin="10"
                 IsEnabled="{Binding CanStartGame}"
